--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.5",
     "@next/third-parties": "^14.2.4",
     "@stripe/react-stripe-js": "^2.7.2",
     "@stripe/stripe-js": "^4.0.0",
     "@types/axios": "^0.14.0",
+    "@types/mdx": "^2.0.13",
     "@vercel/speed-insights": "^1.0.12",
     "antd": "^5.18.3",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "currency.js": "^2.0.4",
     "framer-motion": "^11.2.12",
+    "marked": "^14.0.0",
     "next": "^14.2.4",
+    "next-mdx-remote": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.10.3",
