--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "next dev --port 3008",
     "build": "next build",
+    "build:pro": "next build --mode pro",
+    "build:test": "NODE_ENV=test next build && next export",
     "start": "next start --port 3008",
+    "start:test": "NODE_ENV=test next start --port 3008",
     "lint": "next lint",
     "eslint": "eslint .",
     "format": "prettier --write ."
