add test server api.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev --port 3008",
     "build": "next build",
-    "build:pro": "next build --mode pro",
-    "build:test": "NODE_ENV=test next build && next export",
+    "build:pro": "NODE_ENV=pro  next build ",
+    "build:test": "NODE_ENV=test next build",
     "start": "next start --port 3008",
     "start:test": "NODE_ENV=test next start --port 3008",
     "lint": "next lint",
