--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "@vercel/speed-insights": "^1.0.12",
     "antd": "^5.18.3",
     "autoprefixer": "^10.4.19",
-    "axios": "^1.7.2",
+    "axios": "^1.7.4",
     "currency.js": "^2.0.4",
     "framer-motion": "^11.2.12",
     "marked": "^14.0.0",
-    "next": "^14.2.4",
+    "next": "^14.2.6",
     "next-mdx-remote": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -42,20 +42,20 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@ant-design/cssinjs": "^1.18.2",
     "@eslint/compat": "^1.1.0",
     "@eslint/js": "^9.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
     "globals": "^15.8.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "postcss": "^8",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.4.4",
     "typescript": "^5",
-    "typescript-eslint": "^7.15.0"
+    "typescript-eslint": "^7.15.0",
+    "webpack": "^5"
   }
 }
