--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "antd": "^5.18.3",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.4",
+    "clsx": "^2.1.1",
     "currency.js": "^2.0.4",
     "framer-motion": "^11.2.12",
     "marked": "^14.0.0",
