--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.5",
@@ -28,15 +29,20 @@
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
     "currency.js": "^2.0.4",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.2.12",
     "marked": "^14.0.0",
     "next": "^14.2.6",
     "next-mdx-remote": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-places-autocomplete": "^4.1.0",
+    "react-hook-form": "^7.54.0",
     "react-intersection-observer": "^9.10.3",
     "react-intl": "^6.6.8",
+    "react-use": "^17.6.0",
     "swr": "^2.2.5",
+    "yup": "^1.5.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
