--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-next",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev --port 3008",
@@ -9,7 +9,7 @@
     "build:test": "NODE_ENV=test next build",
     "start": "next start --port 3008",
     "start:test": "NODE_ENV=test next start --port 3008",
-    "lint": "next lint",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "eslint": "eslint .",
     "format": "prettier --write ."
   },
@@ -21,25 +21,26 @@
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.5",
     "@next/third-parties": "^14.2.4",
-    "@types/axios": "^0.14.0",
     "@types/mdx": "^2.0.13",
     "@vercel/speed-insights": "^1.0.12",
-    "antd": "^5.18.3",
+    "antd": "^5.23.2",
     "autoprefixer": "^10.4.19",
-    "axios": "^1.7.4",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "currency.js": "^2.0.4",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.2.12",
     "marked": "^14.0.0",
-    "next": "^14.2.6",
+    "next": "^14.2.23",
     "next-mdx-remote": "^5.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-places-autocomplete": "^4.1.0",
     "react-hook-form": "^7.54.0",
+    "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.10.3",
     "react-intl": "^6.6.8",
+    "react-phone-number-input": "^3.4.11",
     "react-use": "^17.6.0",
     "swr": "^2.2.5",
     "yup": "^1.5.0",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@ant-design/cssinjs": "^1.18.2",
+    "@builder.io/partytown": "^0.10.3",
     "@eslint/compat": "^1.1.0",
     "@eslint/js": "^9.6.0",
     "@types/node": "^20",
