feat: show best seller and sale product in index page.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port 3008",
-    "build": "next build",
-    "build:prod": "NODE_ENV=prod  next build ",
-    "build:test": "NODE_ENV=test next build",
+    "dev:prod": "dotenv -e .env.production next dev",
+    "build": "dotenv -e .env.local next build",
+    "build:prod": "dotenv -e .env.production  next build ",
+    "build:prod": "dotenv -e .env.production  next build ",
+    "build:p": "next build --mode production",
     "start": "next start --port 3008",
     "start:test": "NODE_ENV=test next start --port 3008",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -42,6 +44,7 @@
     "react-intl": "^6.6.8",
     "react-phone-number-input": "^3.4.11",
     "react-use": "^17.6.0",
+    "sqids": "^0.3.0",
     "swr": "^2.2.5",
     "yup": "^1.5.0",
     "zustand": "^4.5.4"
@@ -53,6 +56,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv-cli": "^8.0.0",
     "eslint": "8.56.0",
     "globals": "^15.8.0",
     "husky": "^9.0.11",
