--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
-NEXT_PUBLIC_API_URL=https://api.ftanails.com
+NEXT_PUBLIC_ENV=production
+
+NEXT_PUBLIC_API_URL=https://api.dms.pub
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyAOMaR50m9GPU-IqfkcP5OUB_Eyfq30zgs
