--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-phone-number-input": "^3.4.11",
     "react-use": "^17.6.0",
     "sqids": "^0.3.0",
+    "swiper": "^11.2.5",
     "swr": "^2.2.5",
     "yup": "^1.5.0",
     "zustand": "^4.5.4"
