feat: update index page styles css.

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "clsx": "^2.1.1",
     "currency.js": "^2.0.4",
     "dayjs": "^1.11.13",
-    "framer-motion": "^11.2.12",
     "marked": "^14.0.0",
+    "motion": "^12.6.3",
     "next": "^14.2.23",
     "next-mdx-remote": "^5.0.0",
     "react": "^18.3.1",
