--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_ENV=production
 
-NEXT_PUBLIC_API_URL=https://api.dms.pub
+# NEXT_PUBLIC_API_URL=https://api.dms.pub
+NEXT_PUBLIC_API_URL=https://api.freebooks.ink
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyAOMaR50m9GPU-IqfkcP5OUB_Eyfq30zgs
