--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "currency.js": "^2.0.4",
     "dayjs": "^1.11.13",
+    "html-react-parser": "^5.2.3",
     "marked": "^14.0.0",
     "motion": "^12.6.3",
     "next": "^14.2.23",
@@ -67,5 +68,12 @@
     "typescript": "^5",
     "typescript-eslint": "^7.15.0",
     "webpack": "^5"
-  }
+  },
+  "browserslist": [
+    "chrome 64",
+    "edge 79",
+    "firefox 67",
+    "opera 51",
+    "safari 12"
+  ]
 }
