--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "dotenv -e .env.local next build",
     "build:prod": "dotenv -e .env.production  next build ",
     "build:p": "next build --mode production",
+    "sitemap": "next-sitemap",
     "start": "next start --port 3008",
     "start:test": "NODE_ENV=test next start --port 3008",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -62,6 +63,7 @@
     "globals": "^15.8.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.4",
